# clay-cpp

bindings/cpp/clay-cpp/: CMakeLists.txt
bindings/cpp/clay-cpp/include/clay/: clay.hpp  test.h
bindings/cpp/clay-cpp/src/: clay.cpp
bindings/cpp/examples/basic/: CMakeLists.txt  windows_build.bat
bindings/cpp/examples/basic/src/: main.cpp
